force-app/main/default/src/objects/HealthCloudGA__LabelConfig__mdt/HealthCloudGA__LabelConfig__mdt.object-meta.xml
<CustomObject>
    <label>LabelConfig</label>
    <pluralLabel>LabelConfigs</pluralLabel>
</CustomObject>