force-app/main/default/src/objects/HealthCloudGA__LabelConfig__mdt/fields/HealthCloudGA__FieldName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FieldName__c</fullName>
    <label>FieldName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>