force-app/main/default/src/objects/HealthCloudGA__LabelConfig__mdt/fields/HealthCloudGA__FieldReplaceLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FieldReplaceLabel__c</fullName>
    <label>FieldReplaceLabel</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>