force-app/main/default/src/objects/HealthCloudGA__LabelConfig__mdt/fields/HealthCloudGA__Sobject__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Sobject__c</fullName>
    <label>Sobject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>